--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "student",
+  "name": "homepage",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -12,17 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.4",
-    "@tanstack/react-query": "^5.74.3",
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
-    "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "viem": "2.x",
-    "wagmi": "^2.14.16"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
