--- a/apps/student/.env.example
+++ b/apps/student/.env.example
@@ -1,2 +1,7 @@
 #take it from https://cloud.walletconnect.com/
 NEXT_PUBLIC_PROJECT_ID=
+
+NEXT_PUBLIC_PINATA_API_KEY=
+NEXT_PUBLIC_PINATA_API_KEY_SECRET=
+NEXT_PUBLIC_PINATA_JWT=
+NEXT_PUBLIC_PINATA_GATEWAY=
