--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -16,12 +16,14 @@
     "@tanstack/react-query": "^5.74.3",
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "axios": "^1.8.4",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "pinata": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "viem": "2.x",
     "wagmi": "^2.14.16"
   },
