--- a/apps/hardhat/package.json
+++ b/apps/hardhat/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "hardhat-project",
+  "name": "hardhat-javascript-starter",
+  "scripts": {
+    "build": "npx thirdweb@latest detect",
+    "deploy": "npx thirdweb@latest deploy",
+    "publish": "npx thirdweb@latest publish"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition": "^0.15.11",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
-    "@nomicfoundation/hardhat-viem": "^2.0.6",
-    "@types/chai": "^5.2.1",
-    "@types/chai-as-promised": "^8.0.2",
-    "chai-as-promised": "^8.0.1",
-    "hardhat": "^2.23.0",
-    "viem": "~2.26.5"
+    "@matterlabs/hardhat-zksync-solc": "^1.1.14",
+    "@matterlabs/hardhat-zksync-verify": "^1.7.1",
+    "hardhat": "^2.19.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.3.0",
-    "chai": "^5.2.0"
+    "@thirdweb-dev/contracts": "^3.8.0",
+    "zksync-ethers": "^5.7.0"
   }
 }
