--- a/apps/student/.env.example
+++ b/apps/student/.env.example
@@ -5,3 +5,7 @@ NEXT_PUBLIC_PINATA_API_KEY=
 NEXT_PUBLIC_PINATA_API_KEY_SECRET=
 NEXT_PUBLIC_PINATA_JWT=
 NEXT_PUBLIC_PINATA_GATEWAY=
+
+#take it from thirdweb
+NEXT_PUBLIC_CLIENT_ID=
+NEXT_PUBLIC_SECRET_KEY=
