--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
+    "thirdweb": "^5.95.2",
     "viem": "2.x",
     "wagmi": "^2.14.16"
   },
