--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -15,6 +15,7 @@
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
+    "form-data": "^4.0.2",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
