--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -12,21 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
-<<<<<<< HEAD
     "form-data": "^4.0.2",
-=======
-    "ckeditor5": "^45.0.0",
->>>>>>> 18967a0380cd202de4435f70bad9904d1b54e287
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "pinata": "^2.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sonner": "^2.0.3",
     "thirdweb": "^5.95.2"
   },
