--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -17,6 +17,7 @@
     "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
+    "ckeditor5": "^45.0.0",
     "form-data": "^4.0.2",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
