--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -20,11 +20,13 @@
     "ckeditor5": "^45.0.0",
     "form-data": "^4.0.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.10.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "pinata": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
     "thirdweb": "^5.95.2"
   },
