--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
-    "@workspace/math": "workspace:*",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
     "ckeditor5": "^45.0.0",
@@ -28,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
-    "thirdweb": "^5.95.2"
+    "thirdweb": "^5.95.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
