--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "thirdweb": "^5.95.2",
     "zustand": "^5.0.4"
