--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -22,6 +22,7 @@
     "motion": "^12.10.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.8.16",
     "pinata": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
