--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "ckeditor5": "^45.0.0",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.10.0",
@@ -26,6 +28,7 @@
     "nextjs-toploader": "^3.8.16",
     "pinata": "^2.2.0",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "socket.io-client": "^4.8.1",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
