--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -37,6 +37,7 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-day-picker": "^5.3.0",
