--- a/apps/student/.env.example
+++ b/apps/student/.env.example
@@ -4,6 +4,6 @@ NEXT_PUBLIC_PINATA_JWT=
 NEXT_PUBLIC_PINATA_GATEWAY=
 
 #take it from thirdweb
-NEXT_PUBLIC_THIRDWEB_CLIENT_ID=
+NEXT_PUBLIC_CLIENT_ID=
 TW_SECRET_KEY=
 NEXT_PUBLIC_TW_KEY=
