--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tinymce/tinymce-react": "^6.1.0",
     "@workspace/ui": "workspace:*",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
