--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -22,6 +22,7 @@
     "ckeditor5": "^45.0.0",
     "date-fns": "^4.1.0",
     "form-data": "^4.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.10.0",
     "next": "^15.2.4",
