--- a/apps/school/package.json
+++ b/apps/school/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,10 +16,13 @@
     "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
+    "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "thirdweb": "^5.102.6"
+    "sonner": "^2.0.3",
+    "thirdweb": "^5.102.6",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.78.0",
